# TDS-Calculator

./: .gitignore  pyproject.toml
tds_calculator/: calculator.kv  main.py
tds_calculator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tds_calculator/common/: arrival_section.py  buttons_section.py  departure_section.py  distance_section.py  error_message.py  pop_message.py  speed_section.py  template_date_string.py  template_dict_keys.py  template_local_time.py
tds_calculator/kv/: arrival_section.kv  buttons.kv  departure_section.kv  distance_section.kv  pop_message.kv  speed_section.kv  templates_rules.kv
tests/: test_tds_calculator.py
