[tool.poetry]
name = "tds_calculator"
version = "0.1.0"
description = "An app that calculates Time, Distance or Speed"
authors = ["Dragos Manea <maneadr@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
wheel = "^0.34.2"
setuptools = "^46.1"
docutils = "^0.16.0"
pygments = "^2.6"
pypiwin32 = "^223.0"
"kivy_deps.sdl2" = "=0.1.23"
"kivy_deps.glew" = "=0.1.12"
kivy = "=1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
mypy = "^0.770.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pylint = "^2.5"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
